fix: show time in user selected timezone, overflow issue, metadata loading

--- a/frontend/src/components/SpanHoverCard/SpanHoverCard.styles.scss
+++ b/frontend/src/components/SpanHoverCard/SpanHoverCard.styles.scss
@@ -1,6 +1,4 @@
 .span-hover-card {
-	width: 206px;
-
 	.ant-popover-inner {
 		background: linear-gradient(
 			139deg,
@@ -60,7 +58,6 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		max-width: 174px;
 		margin-top: 8px;
 	}
 
